--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
           <h3 class="contacts-title">Contacts</h3>
           <div>
             <span class="contacts-link-type">C:</span>
-            <a class="contacts-link" href="tel:380951138598"
-              >+38 095 113 85 98</a
+            <a class="contacts-link" href="tel:37360329175"
+              >+37360329175</a
             >
           </div>
           <div>
             <span class="contacts-link-type">E:</span>
-            <a class="contacts-link" href="mailto:chornyiav@gmail.com"
-              >chornyiav@gmail.com</a
+            <a class="contacts-link" href="mailto:ganenko.dmitrii@gmail.com"
+              >ganenko.dmitrii@gmail.com</a
             >
           </div>
         </div>
@@ -40,13 +40,13 @@
               <span class="skills-text">HTML5</span>
             </li>
             <li class="skills-item">
-              <span class="skills-text">CSS3</span>
+              <span class="skills-text">CSS3/Sass</span>
             </li>
             <li class="skills-item">
               <span class="skills-text">GIT</span>
             </li>
             <li class="skills-item">
-              <span class="skills-text">WebPack</span>
+              <span class="skills-text">WebPack/Parcel</span>
             </li>
             <li class="skills-item">
               <span class="skills-text">JavaScript</span>
@@ -54,9 +54,9 @@
             <li class="skills-item">
               <span class="skills-text">React.js</span>
             </li>
-            <li class="skills-item">
+            <!-- <li class="skills-item">
               <span class="skills-text">Node.js</span>
-            </li>
+            </li> -->
           </ul>
         </div>
         <!--soft skills container -->
@@ -79,12 +79,12 @@
           <!-- about me main info -->
           <h2 class="profession">Front-End Developer</h2>
           <h1 class="name">Ganenco Dmitri</h1>
-          <p class="description">
+          <!-- <p class="description">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis
             ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas
             accumsan lacus vel facilisis.
-          </p>
+          </p> -->
         </div>
         <!-- projects container -->
         <div class="projects-container">
@@ -140,9 +140,9 @@
             </h4>
             <span class="profession-time"
               >September 2019 - up to now
-              <span class="profession-devider">|</span> Ukraine</span
+              <span class="profession-devider">|</span> Moldova</span
             >
-            <ul class="profession-duties">
+            <!-- <ul class="profession-duties">
               <li class="profession-duties-item">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -157,10 +157,10 @@
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod.
               </li>
-            </ul>
+            </ul> -->
           </div>
           <!-- company 2 -->
-          <div>
+          <!-- <div>
             <h4 class="profession-title">
               Manager <span class="profession-company">Roga & Kopyta New</span>
             </h4>
@@ -176,9 +176,9 @@
               <li class="profession-duties-item">Quis ipsum suspendisse ultrices gravida.</li>
               <li class="profession-duties-item">Risus commodo viverra maecenas.</li>
             </ul>
-          </div>
+          </div> -->
           <!-- company 3 -->
-          <div>
+          <!-- <div>
             <h4 class="profession-title">
               Manager <span class="profession-company">Roga & Kopyta LLC</span>
             </h4>
@@ -194,9 +194,9 @@
               <li class="profession-duties-item">Risus commodo viverra maecenas.</li>
             </ul>
           </div>
-        </div>
+        </div> -->
         <!-- education container -->
-        <div>
+        <!-- <div>
           <h3 class="about-me-title">Education</h3>
           <p class="education-title">Kharkiv National University of Radioelectronics</p>
           <p class="education-prof">Management</p>
@@ -204,7 +204,7 @@
             >Septermber 2009 - June 2014
             <span class="profession-devider">|</span> Ukraine</span
           >
-        </div>
+        </div> -->
       </div>
     </div>
   </body>
