--- a/index.html
+++ b/index.html
@@ -4,33 +4,92 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My resume</title>
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap&subset=cyrillic"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
+    <base target="_blank" />
   </head>
   <body>
     <!-- main container -->
 
     <div class="wrapper">
       <aside class="sidebar">
-        <img class="my-foto" src="./img/photo.jpg" alt="my photo" />
+        <div class="box-foto">
+          <img src="./img/image.jpg" width="370" alt="my photo" class="foto" />
+        </div>
+
         <!--  contacts container -->
         <div class="contacts-container">
           <h3 class="contacts-title">Contacts</h3>
-          <div>
-            <span class="contacts-link-type">C:</span>
-            <a class="contacts-link" href="tel:37360329175"
-              >+37360329175</a
-            >
-          </div>
-          <div>
-            <span class="contacts-link-type">E:</span>
-            <a class="contacts-link" href="mailto:ganenko.dmitrii@gmail.com"
-              >ganenko.dmitrii@gmail.com</a
-            >
-          </div>
+          <ul>
+            <li class="contacts-item">
+              <a
+                href="tel:37360329175"
+                aria-label="Number phone"
+                class="contacts-link"
+              >
+                <svg class="contacts-icon">
+                  <use href="./img/symbol-defs-new.svg#icon-phone"></use>
+                </svg>
+                <p>+373 60 329175</p>
+              </a>
+            </li>
+            <li class="contacts-item">
+              <a
+                href="mailto:ganenko.dmitrii@gmail.com"
+                aria-label="E-mail"
+                class="contacts-link"
+              >
+                <svg class="contacts-icon">
+                  <use href="./img/symbol-defs-new.svg#icon-mail"></use>
+                </svg>
+                <p>ganenko.dmitrii@gmail.com</p>
+              </a>
+            </li>
+            <li class="contacts-item">
+              <a
+                href="https://github.com/ganenkodmitrii"
+                aria-label="GitHub"
+                class="contacts-link"
+              >
+                <svg class="contacts-icon">
+                  <use href="./img/symbol-defs-new.svg#icon-github"></use>
+                </svg>
+                <p>GitHub</p>
+              </a>
+            </li>
+            <li class="contacts-item">
+              <a
+                href="https://www.linkedin.com/in/dmitri-ganenco-226657175/"
+                aria-label="LinkedIn"
+                class="contacts-link"
+              >
+                <svg class="contacts-icon">
+                  <use href="./img/symbol-defs-new.svg#icon-linkedin"></use>
+                </svg>
+                <p>LinkedIn</p>
+              </a>
+            </li>
+            <li class="contacts-item">
+              <a
+                href="https://t.me/DmitriGanenco"
+                aria-label="Telegram"
+                class="contacts-link"
+              >
+                <svg class="contacts-icon">
+                  <use href="./img/symbol-defs-new.svg#icon-telegram"></use>
+                </svg>
+                <p>Telegram</p>
+              </a>
+            </li>
+          </ul>
         </div>
         <!-- tech skills container -->
         <div class="skills-container">
@@ -55,7 +114,7 @@
               <span class="skills-text">React.js</span>
             </li>
             <!-- <li class="skills-item">
-              <span class="skills-text">Node.js</span>
+              <span class="skills-text">Redux</span>
             </li> -->
           </ul>
         </div>
@@ -63,9 +122,15 @@
         <div class="skills-container">
           <h3 class="skills-title">Soft Skills</h3>
           <ul>
-            <li class="skills-item"><span class="skills-text">Scrum</span></li>
-            <li class="skills-item"><span class="skills-text">Agile</span></li>
-            <li class="skills-item"><span class="skills-text">GTD</span></li>
+            <li class="skills-item">
+              <span class="skills-text">Scrum</span>
+            </li>
+            <li class="skills-item">
+              <span class="skills-text">Agile</span>
+            </li>
+            <li class="skills-item">
+              <span class="skills-text">GTD</span>
+            </li>
             <li class="skills-item">
               <span class="skills-text">Teamwork</span>
             </li>
@@ -77,32 +142,96 @@
         <!-- about me container -->
         <div class="info-container">
           <!-- about me main info -->
-          <h2 class="profession">Front-End Developer</h2>
           <h1 class="name">Ganenco Dmitri</h1>
-          <!-- <p class="description">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis
-            ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas
-            accumsan lacus vel facilisis.
-          </p> -->
+          <h2 class="profession">Front-End Developer</h2>
+          <p class="description">
+            I'm a beginner front-end developer. I am looking for an interesting
+            job in a friendly, prosperous and interesting company in order to
+            develop my skills and grow together with the team.
+          </p>
         </div>
         <!-- projects container -->
         <div class="projects-container">
           <h3 class="about-me-title">Projects</h3>
           <ol>
             <li class="project-item">
-              <a class="project-link" href="https://lovecamp.allinsol.com/"
-                >https://lovecamp.allinsol.com/</a
-              >
-              <a class="dots"
-                >...............................................</a
-              >
-              <span>
-                <b>[</b> <span class="tech-name">HTML5, CSS3</span>
-                <b>]</b></span
-              >
+              <div class="project-box">
+                <a
+                  class="project-link"
+                  href="https://ganenkodmitrii.github.io/goit-markup-hw-08/"
+                  >WEB STUDIO</a
+                >
+                <span class="tech-name">[HTML5, CSS3]</span>
+                <a
+                  href="https://github.com/ganenkodmitrii/goit-markup-hw-08"
+                  aria-label="GitHub"
+                  class="project-git"
+                >
+                  <svg class="project-icon">
+                    <use href="./img/symbol-defs-new.svg#icon-github"></use>
+                  </svg>
+                </a>
+              </div>
             </li>
             <li class="project-item">
+              <div class="project-box">
+                <a
+                  class="project-link"
+                  href="https://ganenkodmitrii.github.io/goit-js-hw-13-image-finder/"
+                  >IMAGE FINDER</a
+                >
+                <span class="tech-name">[HTML5, CSS3, JavaScript]</span>
+                <a
+                  href="https://github.com/ganenkodmitrii/goit-js-hw-13-image-finder"
+                  aria-label="GitHub"
+                  class="project-git"
+                >
+                  <svg class="project-icon">
+                    <use href="./img/symbol-defs-new.svg#icon-github"></use>
+                  </svg>
+                </a>
+              </div>
+            </li>
+            <li class="project-item">
+              <div class="project-box">
+                <a
+                  class="project-link"
+                  href="https://ganenkodmitrii.github.io/goit-markup-hw-08/"
+                  >WEB STUDIO</a
+                >
+                <span class="tech-name">[HTML5, CSS3]</span>
+                <a
+                  href="https://github.com/ganenkodmitrii/goit-markup-hw-08"
+                  aria-label="GitHub"
+                  class="project-git"
+                >
+                  <svg class="project-icon">
+                    <use href="./img/symbol-defs-new.svg#icon-github"></use>
+                  </svg>
+                </a>
+              </div>
+            </li>
+            <!-- <h4 class="profession">Command projects</h4> -->
+            <li class="project-item">
+              <div class="project-box">
+                <a
+                  class="project-link"
+                  href="https://ganenkodmitrii.github.io/goit-markup-hw-08/"
+                  >WEB STUDIO</a
+                >
+                <span class="tech-name">[HTML5, CSS3]</span>
+                <a
+                  href="https://github.com/ganenkodmitrii/goit-markup-hw-08"
+                  aria-label="GitHub"
+                  class="project-git"
+                >
+                  <svg class="project-icon">
+                    <use href="./img/symbol-defs-new.svg#icon-github"></use>
+                  </svg>
+                </a>
+              </div>
+            </li>
+            <!-- <li class="project-item">
               <a class="project-link" href="https://cryptohub.goit.ua/"
                 >https://cryptohub.goit.ua/</a
               >
@@ -110,7 +239,8 @@
                 >........................................................</a
               >
               <span
-                ><b>[</b> <span class="tech-name">JavaScript</span>
+                ><b>[</b>
+                <span class="tech-name">JavaScript</span>
                 <b>]</b></span
               >
             </li>
@@ -125,7 +255,7 @@
                 ><b>[</b> <span class="tech-name">React.js, Node.js</span
                 ><b>]</b>
               </span>
-            </li>
+            </li> -->
           </ol>
         </div>
         <!-- work experience -->
@@ -140,9 +270,10 @@
             </h4>
             <span class="profession-time"
               >September 2019 - up to now
-              <span class="profession-devider">|</span> Moldova</span
+              <span class="profession-devider">|</span>
+              Moldova</span
             >
-            <!-- <ul class="profession-duties">
+            <ul class="profession-duties">
               <li class="profession-duties-item">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -157,54 +288,68 @@
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod.
               </li>
-            </ul> -->
+            </ul>
           </div>
           <!-- company 2 -->
-          <!-- <div>
+          <div>
             <h4 class="profession-title">
-              Manager <span class="profession-company">Roga & Kopyta New</span>
+              Manager
+              <span class="profession-company">Roga & Kopyta New</span>
             </h4>
             <span class="profession-time"
               >March 2015 - October 2018
-              <span class="profession-devider">|</span> Ukraine</span
+              <span class="profession-devider">|</span>
+              Ukraine</span
             >
             <ul class="profession-duties">
               <li class="profession-duties-item">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod labore et dolore magna aliqua.
-              </li class="profession-duties-item">
-              <li class="profession-duties-item">Quis ipsum suspendisse ultrices gravida.</li>
-              <li class="profession-duties-item">Risus commodo viverra maecenas.</li>
+              </li>
+              <li class="profession-duties-item">
+                Quis ipsum suspendisse ultrices gravida.
+              </li>
+              <li class="profession-duties-item">
+                Risus commodo viverra maecenas.
+              </li>
             </ul>
-          </div> -->
+          </div>
           <!-- company 3 -->
-          <!-- <div>
+          <div>
             <h4 class="profession-title">
-              Manager <span class="profession-company">Roga & Kopyta LLC</span>
+              Manager
+              <span class="profession-company">Roga & Kopyta LLC</span>
             </h4>
             <span class="profession-time"
               >June 2014 - February 2015
-              <span class="profession-devider">|</span> Ukraine</span
+              <span class="profession-devider">|</span>
+              Ukraine</span
             >
             <ul class="profession-duties">
               <li class="profession-duties-item">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
               </li>
-              <li class="profession-duties-item">Quis ipsum suspendisse ultrices gravida.</li>
-              <li class="profession-duties-item">Risus commodo viverra maecenas.</li>
+              <li class="profession-duties-item">
+                Quis ipsum suspendisse ultrices gravida.
+              </li>
+              <li class="profession-duties-item">
+                Risus commodo viverra maecenas.
+              </li>
             </ul>
           </div>
-        </div> -->
+        </div>
         <!-- education container -->
-        <!-- <div>
+        <div>
           <h3 class="about-me-title">Education</h3>
-          <p class="education-title">Kharkiv National University of Radioelectronics</p>
+          <p class="education-title">
+            Kharkiv National University of Radioelectronics
+          </p>
           <p class="education-prof">Management</p>
           <span class="profession-time"
             >Septermber 2009 - June 2014
             <span class="profession-devider">|</span> Ukraine</span
           >
-        </div> -->
+        </div>
       </div>
     </div>
   </body>
