--- a/index.html
+++ b/index.html
@@ -123,17 +123,23 @@
           <h3 class="skills-title">Soft Skills</h3>
           <ul>
             <li class="skills-item">
+              <span class="skills-text">Responsibility</span>
+            </li>
+            <li class="skills-item">
+              <span class="skills-text">Proactive</span>
+            </li>
+            <li class="skills-item">
+              <span class="skills-text">Teamwork</span>
+            </li>
+            <li class="skills-item">
               <span class="skills-text">Scrum</span>
             </li>
             <li class="skills-item">
               <span class="skills-text">Agile</span>
             </li>
-            <li class="skills-item">
+            <!-- <li class="skills-item">
               <span class="skills-text">GTD</span>
-            </li>
-            <li class="skills-item">
-              <span class="skills-text">Teamwork</span>
-            </li>
+            </li> -->
           </ul>
         </div>
       </aside>
@@ -159,18 +165,20 @@
                 <a
                   class="project-link"
                   href="https://ganenkodmitrii.github.io/goit-markup-hw-08/"
-                  >WEB STUDIO</a
+                  >WEB Studio</a
                 >
-                <span class="tech-name">[HTML5, CSS3]</span>
-                <a
-                  href="https://github.com/ganenkodmitrii/goit-markup-hw-08"
-                  aria-label="GitHub"
-                  class="project-git"
-                >
-                  <svg class="project-icon">
-                    <use href="./img/symbol-defs-new.svg#icon-github"></use>
-                  </svg>
-                </a>
+                <div class="tech-box">
+                  <span class="tech-name">[HTML5, CSS3]</span>
+                  <a
+                    href="https://github.com/ganenkodmitrii/goit-markup-hw-08"
+                    aria-label="GitHub"
+                    class="project-git"
+                  >
+                    <svg class="project-icon">
+                      <use href="./img/symbol-defs-new.svg#icon-github"></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
             </li>
             <li class="project-item">
@@ -178,57 +186,151 @@
                 <a
                   class="project-link"
                   href="https://ganenkodmitrii.github.io/goit-js-hw-13-image-finder/"
-                  >IMAGE FINDER</a
+                  >Image Finder</a
                 >
-                <span class="tech-name">[HTML5, CSS3, JavaScript]</span>
-                <a
-                  href="https://github.com/ganenkodmitrii/goit-js-hw-13-image-finder"
-                  aria-label="GitHub"
-                  class="project-git"
-                >
-                  <svg class="project-icon">
-                    <use href="./img/symbol-defs-new.svg#icon-github"></use>
-                  </svg>
-                </a>
+                <div class="tech-box">
+                  <span class="tech-name">[JavaScript]</span>
+                  <a
+                    href="https://github.com/ganenkodmitrii/goit-js-hw-13-image-finder"
+                    aria-label="GitHub"
+                    class="project-git"
+                  >
+                    <svg class="project-icon">
+                      <use href="./img/symbol-defs-new.svg#icon-github"></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
             </li>
             <li class="project-item">
               <div class="project-box">
                 <a
                   class="project-link"
-                  href="https://ganenkodmitrii.github.io/goit-markup-hw-08/"
-                  >WEB STUDIO</a
+                  href="https://ganenkodmitrii.github.io/goit-react-hw-04-hooks-feedback/"
+                  >Feedback</a
                 >
-                <span class="tech-name">[HTML5, CSS3]</span>
-                <a
-                  href="https://github.com/ganenkodmitrii/goit-markup-hw-08"
-                  aria-label="GitHub"
-                  class="project-git"
-                >
-                  <svg class="project-icon">
-                    <use href="./img/symbol-defs-new.svg#icon-github"></use>
-                  </svg>
-                </a>
+                <div class="tech-box">
+                  <span class="tech-name">[React.js]</span>
+                  <a
+                    href="https://github.com/ganenkodmitrii/goit-react-hw-04-hooks-feedback"
+                    aria-label="GitHub"
+                    class="project-git"
+                  >
+                    <svg class="project-icon">
+                      <use href="./img/symbol-defs-new.svg#icon-github"></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
             </li>
-            <!-- <h4 class="profession">Command projects</h4> -->
             <li class="project-item">
               <div class="project-box">
                 <a
                   class="project-link"
-                  href="https://ganenkodmitrii.github.io/goit-markup-hw-08/"
-                  >WEB STUDIO</a
+                  href="https://ganenkodmitrii.github.io/goit-react-hw-04-hooks-images/"
+                  >Image Finder</a
                 >
-                <span class="tech-name">[HTML5, CSS3]</span>
+                <div class="tech-box">
+                  <span class="tech-name">[React.js]</span>
+                  <a
+                    href="https://github.com/ganenkodmitrii/goit-react-hw-04-hooks-images"
+                    aria-label="GitHub"
+                    class="project-git"
+                  >
+                    <svg class="project-icon">
+                      <use href="./img/symbol-defs-new.svg#icon-github"></use>
+                    </svg>
+                  </a>
+                </div>
+              </div>
+            </li>
+            <li class="project-item">
+              <div class="project-box">
                 <a
-                  href="https://github.com/ganenkodmitrii/goit-markup-hw-08"
-                  aria-label="GitHub"
-                  class="project-git"
+                  class="project-link"
+                  href="https://ganenco-goit-project-movies.netlify.app/"
+                  >Movies</a
                 >
-                  <svg class="project-icon">
-                    <use href="./img/symbol-defs-new.svg#icon-github"></use>
-                  </svg>
-                </a>
+                <div class="tech-box">
+                  <span class="tech-name">[React.js]</span>
+                  <a
+                    href="https://github.com/ganenkodmitrii/goit-react-hw-05-movies"
+                    aria-label="GitHub"
+                    class="project-git"
+                  >
+                    <svg class="project-icon">
+                      <use href="./img/symbol-defs-new.svg#icon-github"></use>
+                    </svg>
+                  </a>
+                </div>
+              </div>
+            </li>
+            <li class="project-item">
+              <div class="project-box">
+                <a
+                  class="project-link"
+                  href="https://ganenco-goit-project-phonebook.netlify.app/"
+                  >Phonebook</a
+                >
+                <div class="tech-box">
+                  <span class="tech-name">[React.js]</span>
+                  <a
+                    href="https://github.com/ganenkodmitrii/goit-react-hw-08-phonebook"
+                    aria-label="GitHub"
+                    class="project-git"
+                  >
+                    <svg class="project-icon">
+                      <use href="./img/symbol-defs-new.svg#icon-github"></use>
+                    </svg>
+                  </a>
+                </div>
+              </div>
+            </li>
+          </ol>
+          <h3 class="about-me-title">
+            <span class="title-color">Command</span> projects
+          </h3>
+          <ol>
+            <li class="project-item">
+              <div class="project-box">
+                <a
+                  class="project-link"
+                  href="https://adya27.github.io/Barbershop/"
+                  >Barbershop</a
+                >
+                <div class="tech-box">
+                  <span class="tech-name">[HTML5, CSS3]</span>
+                  <a
+                    href="https://github.com/adya27/Barbershop"
+                    aria-label="GitHub"
+                    class="project-git"
+                  >
+                    <svg class="project-icon">
+                      <use href="./img/symbol-defs-new.svg#icon-github"></use>
+                    </svg>
+                  </a>
+                </div>
+              </div>
+            </li>
+            <li class="project-item">
+              <div class="project-box">
+                <a
+                  class="project-link"
+                  href="https://adya27.github.io/js-project-group4/"
+                  >Filmoteka</a
+                >
+                <div class="tech-box">
+                  <span class="tech-name">[JavaScript]</span>
+                  <a
+                    href="https://github.com/adya27/js-project-group4"
+                    aria-label="GitHub"
+                    class="project-git"
+                  >
+                    <svg class="project-icon">
+                      <use href="./img/symbol-defs-new.svg#icon-github"></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
             </li>
             <!-- <li class="project-item">
@@ -263,7 +365,7 @@
           <h3 class="about-me-title">Work Experience</h3>
 
           <!-- company 1 -->
-          <div>
+          <!-- <div>
             <h4 class="profession-title">
               Front-End Developer
               <span class="profession-company">Freelance</span>
@@ -288,20 +390,22 @@
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod.
               </li>
-            </ul>
-          </div>
+            </ul>  
+        </div>-->
           <!-- company 2 -->
-          <div>
+          <div class="profession">
             <h4 class="profession-title">
-              Manager
-              <span class="profession-company">Roga & Kopyta New</span>
+              Trumpet player
+              <span class="profession-company"
+                >National Philharmonic "Sergei Lunchevici"</span
+              >
             </h4>
             <span class="profession-time"
-              >March 2015 - October 2018
+              >March 2018 - up to now
               <span class="profession-devider">|</span>
-              Ukraine</span
+              Chisinau, Moldova</span
             >
-            <ul class="profession-duties">
+            <!-- <ul class="profession-duties">
               <li class="profession-duties-item">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod labore et dolore magna aliqua.
@@ -312,20 +416,20 @@
               <li class="profession-duties-item">
                 Risus commodo viverra maecenas.
               </li>
-            </ul>
+            </ul> -->
           </div>
           <!-- company 3 -->
-          <div>
+          <div class="profession">
             <h4 class="profession-title">
-              Manager
-              <span class="profession-company">Roga & Kopyta LLC</span>
+              Trumpet player
+              <span class="profession-company">Cirque Arlette Gruss</span>
             </h4>
             <span class="profession-time"
-              >June 2014 - February 2015
+              >January 2016 - December 2017
               <span class="profession-devider">|</span>
-              Ukraine</span
+              Chisinau, Moldova</span
             >
-            <ul class="profession-duties">
+            <!-- <ul class="profession-duties">
               <li class="profession-duties-item">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
               </li>
@@ -335,20 +439,36 @@
               <li class="profession-duties-item">
                 Risus commodo viverra maecenas.
               </li>
-            </ul>
+            </ul> -->
           </div>
         </div>
         <!-- education container -->
         <div>
           <h3 class="about-me-title">Education</h3>
-          <p class="education-title">
-            Kharkiv National University of Radioelectronics
-          </p>
-          <p class="education-prof">Management</p>
-          <span class="profession-time"
-            >Septermber 2009 - June 2014
-            <span class="profession-devider">|</span> Ukraine</span
-          >
+          <ul class="education-list">
+            <li class="education-item">
+              <p class="education-title">IT School GoIT</p>
+              <p class="education-prof">
+                Front-End Developer(HTML5, CSS3 ,JavaScript, React)
+                <!-- Full stack developer -->
+              </p>
+              <span class="profession-time"
+                >March 2020 - up to now
+                <span class="profession-devider">| </span>Ukraine</span
+              >
+            </li>
+            <li>
+              <p class="education-title">
+                Academy of Music, Theater and Fine Arts
+              </p>
+              <p class="education-prof">Master's degree / Trumpet player</p>
+              <span class="profession-time"
+                >Septermber 2010 - December 2016
+                <span class="profession-devider">| </span>Chisinau,
+                Moldova</span
+              >
+            </li>
+          </ul>
         </div>
       </div>
     </div>
