--- a/index.html
+++ b/index.html
@@ -142,6 +142,21 @@
             </li> -->
           </ul>
         </div>
+        <!-- languages -->
+        <div class="skills-container">
+          <h3 class="skills-title">Languages</h3>
+          <ul>
+            <li class="skills-item">
+              <span class="skills-text">English - pre-intermediate</span>
+            </li>
+            <li class="skills-item">
+              <span class="skills-text">Moldavian - native</span>
+            </li>
+            <li class="skills-item">
+              <span class="skills-text">Russian - native</span>
+            </li>
+          </ul>
+        </div>
       </aside>
 
       <div class="about-me-container">
