--- a/index.html
+++ b/index.html
@@ -126,18 +126,27 @@
               <span class="skills-text">Responsibility</span>
             </li>
             <li class="skills-item">
-              <span class="skills-text">Proactive</span>
+              <span class="skills-text">Proactivity</span>
             </li>
+            <li class="skills-item">
+              <span class="skills-text">Motivation</span>
+            </li>
+
+            <li class="skills-item">
+              <span class="skills-text">Communication </span>
+            </li>
+
             <li class="skills-item">
               <span class="skills-text">Teamwork</span>
             </li>
-            <li class="skills-item">
+
+            <!-- <li class="skills-item">
               <span class="skills-text">Scrum</span>
             </li>
             <li class="skills-item">
               <span class="skills-text">Agile</span>
             </li>
-            <!-- <li class="skills-item">
+            <li class="skills-item">
               <span class="skills-text">GTD</span>
             </li> -->
           </ul>
@@ -167,8 +176,8 @@
           <h2 class="profession">Front-End Developer</h2>
           <p class="description">
             I'm a beginner front-end developer. I am looking for an interesting
-            job in a friendly, prosperous and interesting company in order to
-            develop my skills and grow together with the team.
+            job in a friendly, thriving and exciting company to develop my
+            skills and grow together with the team.
           </p>
         </div>
         <!-- projects container -->
@@ -195,6 +204,10 @@
                   </a>
                 </div>
               </div>
+              <p class="project-info">
+                <span class="info-point">Key points:</span>layout of an adaptive
+                landing page according to the designer's idea.
+              </p>
             </li>
             <li class="project-item">
               <div class="project-box">
@@ -216,6 +229,10 @@
                   </a>
                 </div>
               </div>
+              <p class="project-info">
+                <span class="info-point">Key points:</span>experience with REST
+                API.
+              </p>
             </li>
             <li class="project-item">
               <div class="project-box">
@@ -258,6 +275,10 @@
                   </a>
                 </div>
               </div>
+              <p class="project-info">
+                <span class="info-point">Key points:</span>experience with REST
+                API.
+              </p>
             </li>
             <li class="project-item">
               <div class="project-box">
@@ -279,6 +300,10 @@
                   </a>
                 </div>
               </div>
+              <p class="project-info">
+                <span class="info-point">Key points:</span>experience with React
+                Router, React.lazy.
+              </p>
             </li>
             <li class="project-item">
               <div class="project-box">
@@ -300,10 +325,14 @@
                   </a>
                 </div>
               </div>
+              <p class="project-info">
+                <span class="info-point">Key points:</span>experience with React
+                Router, React.lazy, Redux.
+              </p>
             </li>
           </ol>
           <h3 class="about-me-title">
-            <span class="title-color">Command</span> projects
+            <span class="title-color">Team </span>projects
           </h3>
           <ol>
             <li class="project-item">
@@ -464,7 +493,7 @@
             <li class="education-item">
               <p class="education-title">IT School GoIT</p>
               <p class="education-prof">
-                Front-End Developer(HTML5, CSS3, JavaScript, React)
+                Front-End Developer(HTML5, CSS3, JavaScript, React.js)
                 <!-- Full stack developer -->
               </p>
               <span class="profession-time"
